Started working on client-side backbone userbar

--- a/flasknotes/templates/layout.html
+++ b/flasknotes/templates/layout.html
@@ -41,9 +41,6 @@
               <li class=""><a href="#/register">Register</a></li>
             </ul>
             <form class="navbar-form pull-right" id="userbar">
-              <input type="text" class="span2" placeholder="Username">
-              <input type="password" class="span2" placeholder="Password">
-              <button type="button" class="btn">Log in</button>
             </form>
           </div>
         </div>
@@ -93,10 +90,10 @@
     <script src="static/js/jade_runtime.js"></script>
     <!-- Jade templates js -->
     <script src="static/js/templates.js"></script>
-    <!-- Marionette requirement + all Backbone -->
-    <script src="static/js/json2.js"></script>
-    <!-- Marionette -->
-    <script src="static/js/backbone.marionette.js"></script>
+    <!-- MD5 -->
+    <script src="static/js/md5.js"></script>
+    <!-- Backbone application -->
+    <script src="static/js/flasknotes.js"></script>
 
   </body>
 </html>
