Updated requirements.txt and updated blog

--- a/flasknotes/templates/jade_blog.jade
+++ b/flasknotes/templates/jade_blog.jade
@@ -48,19 +48,19 @@ div.row-fluid
 				cite(title="Mario Bašić") Mario Bašić
 				| , 30.11.2012
 
-// div.row-fluid
+div.row-fluid
 	div.well.span3
-		h4 Day 4
+		h4 Day 5
 		blockquote
 			p
 				ul
-					li Created a backbone router to handle navigation
-					li Created a view for showing blog posts :)
+					li Implemented proper use of views and router in backbone.js
+					li Minor modifications to the project structure and git
 			small Author: 
 				cite(title="Mario Bašić") Mario Bašić
-				| , 30.11.2012
+				| , 04.12.2012
 
-	div.well.span3
+	//div.well.span3
 		h4 Day 4
 		blockquote
 			p
