Implemented doT.js templating engine.

--- a/flasknotes/templates/jade_blog.jade
+++ b/flasknotes/templates/jade_blog.jade
@@ -60,13 +60,13 @@ div.row-fluid
 				cite(title="Mario Bašić") Mario Bašić
 				| , 04.12.2012
 
-	//div.well.span3
-		h4 Day 4
+	div.well.span3
+		h4 Day 6
 		blockquote
 			p
 				ul
-					li Created a backbone router to handle navigation
-					li Created a view for showing blog posts :)
+					li Implemented doT.js templating engine
+					li Very happy :)
 			small Author: 
 				cite(title="Mario Bašić") Mario Bašić
-				| , 30.11.2012
+				| , 10.12.2012
