Day 7 changes - implementing database history

--- a/flasknotes/templates/jade_blog.jade
+++ b/flasknotes/templates/jade_blog.jade
@@ -70,3 +70,17 @@ div.row-fluid
 			small Author: 
 				cite(title="Mario Bašić") Mario Bašić
 				| , 10.12.2012
+
+	div.well.span3
+		h4 Day 7
+		blockquote
+			p
+				ul
+					li Removed doT.js templating engine
+					li Jade is the best!
+					li Created a new model in database for history tracking
+					li backbone: model and collection for notes
+					li backbone: view for notes, read and write
+			small Author: 
+				cite(title="Mario Bašić") Mario Bašić
+				| , 14.12.2012
