--- a/flasknotes/templates/jade_sidebar.jade
+++ b/flasknotes/templates/jade_sidebar.jade
@@ -1,4 +1,6 @@
 ul.nav.nav-list
 	li.nav-header Actions
 	li
-		a(href="#/note/new") New note
+		a(href="#/note/new")
+			i.icon-file
+			|  New note
