--- a/flasknotes/templates/jade_blog.jade
+++ b/flasknotes/templates/jade_blog.jade
@@ -84,3 +84,13 @@ div.row-fluid
 			small Author: 
 				cite(title="Mario Bašić") Mario Bašić
 				| , 14.12.2012
+
+	div.well.span3
+		h4 Day 8
+		blockquote
+			p
+				ul
+					li Implemented inheritance using sqlalchemy mixin's
+			small Author: 
+				cite(title="Mario Bašić") Mario Bašić
+				| , 17.12.2012
